fix: about page section 3 fix the gap

--- a/web/css/about.css
+++ b/web/css/about.css
@@ -205,7 +205,7 @@
     padding: var(--section-padding-mobile);
     display: flex;
     flex-direction: column;
-    gap: var(--list-title-paragraph);
+    gap: var(--row-list-img-three);
 }
 
 
